Fixed search button alignment and change look of dropdown

--- a/bootstrap-3.3.4/less/custom.less
+++ b/bootstrap-3.3.4/less/custom.less
@@ -72,13 +72,18 @@ header {
 		}
 	}
 	.form-control {
-		width: 88%;
+		width: 100%;
 		margin-right: 5px; 
 	}
+	ul.dropdown-menu {
+		border-style: none;
+		border-top: 1px solid #cccccc;  
+	}
 	.dropdown-menu {
-		padding: 10px;
+		padding: 0 10px;
 		border-radius: 0;
 		width: 100%;
+		margin:0;
 	}
 }
 .navbar-brand {
@@ -95,6 +100,9 @@ header {
 }
 .navbar-default .navbar-nav > li > a:hover {
 		color: #fff;
+}
+.navbar-default .navbar-form {
+	border-style: none;
 }
 
 
