--- a/bootstrap-3.3.4/less/variables.less
+++ b/bootstrap-3.3.4/less/variables.less
@@ -227,7 +227,7 @@
 //## Dropdown menu container and contents.
 
 //** Background for the dropdown menu.
-@dropdown-bg:                    #000;
+@dropdown-bg:                    #f8f8f8;
 //** Dropdown menu `border-color`.
 @dropdown-border:                rgba(0,0,0,.15);
 //** Dropdown menu `border-color` **for IE8**.
